@@ -1,6 +1,7 @@
 master
 - Mayhem
   You can now drag replies in the dump list to reorder them.
+  Fix sauce links for spoiler thumbnails.
 
 2.26.0
 - desuwa
